// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuBar > renders 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          draggable="false"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-help"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-contact"
        >
          Contact
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="btn btn-tertiary menu-upgrade"
          type="button"
        >
          <img
            alt="Streetmix+"
            class="menu-avatar-subscriber"
            src="test-file-stub"
          />
          Get Streetmix+‎
        </button>
      </li>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <button
          class="menu-trigger"
          id="menubar-new"
        >
          New street
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-share"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-locale"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            focusable="false"
            size="18"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="btn btn-primary menu-sign-in"
          type="button"
        >
          Sign in
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar > renders logged in user 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          draggable="false"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-help"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-contact"
        >
          Contact
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="btn btn-tertiary menu-upgrade"
          type="button"
        >
          <img
            alt="Streetmix+"
            class="menu-avatar-subscriber"
            src="test-file-stub"
          />
          Get Streetmix+‎
        </button>
      </li>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <button
          class="menu-trigger"
          id="menubar-new"
        >
          New street
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-share"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-locale"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            focusable="false"
            size="18"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger menu-avatar"
          id="menubar-identity"
        >
          <span
            class="avatar"
          >
            <object
              aria-label="foo"
              type="image/png"
            >
              <img
                alt="foo"
                src="test-file-stub"
              />
            </object>
          </span>
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar > renders minimal menu in offline mode 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          draggable="false"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-help"
        >
          Help
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <button
          class="menu-trigger"
          id="menubar-new"
        >
          New street
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-share"
        >
          Share
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
      <li>
        <button
          class="menu-trigger"
          id="menubar-locale"
        >
          <svg
            aria-hidden="true"
            data-icon="language"
            focusable="false"
            size="18"
          />
          <span
            style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; word-wrap: normal;"
          >
            Language
          </span>
          <svg
            class="menu-carat-down"
            data-icon="chevron-down"
            size="14"
          />
        </button>
      </li>
    </ul>
    <div
      class="instance-badge instance-label-demo"
    >
      Demo
    </div>
  </nav>
</DocumentFragment>
`;
